--- a/pages/contato.html
+++ b/pages/contato.html
@@ -10,14 +10,14 @@
     <div class="container">
         <header>
             <div class="logo-img">
-                <img src="" alt="logo da pizzaria Ké Pizza">
+                <img src="../images/Pizzaria logo (1).png" alt="logo da pizzaria Ké Pizza">
             </div>
 
             <div class="titulo-header">
                 <h2 class="h2-header">Ké Pizza</h2>
             </div>
 
-            <ul>
+            <ul class="nav-bar">
                 <li>Início</li>
                 <li>Menu</li>
                 <li>Contato</li>
