--- a/pages/contato.html
+++ b/pages/contato.html
@@ -18,9 +18,9 @@
             </div>
 
             <ul class="nav-bar">
-                <li>Início</li>
-                <li>Menu</li>
-                <li>Contato</li>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </header>
     </div>
