feat: finish page contato html

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -23,6 +23,26 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </header>
+
+        <div class="contato">
+            <div class="contato-img">
+                <img src="../images/Pizzaria logo (1).png" alt="">
+            </div>
+
+            <div class="nome-pizzaria">
+                <h2>Ké Pizza</h2>
+            </div>
+
+            <div class="endereco-pizarria">
+                <p>Rua dos gatos</p>
+            </div>
+
+            <div class="campos-info">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div>
+        </div>
     </div>
 </body>
 </html>
