feat: minimal changes in html in page contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -37,10 +37,12 @@
                 <p>Rua dos gatos</p>
             </div>
 
-            <div class="campos-info">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+            <div class="background-info">
+                <div class="campos-info">
+                    <input type="text" placeholder="Nome">
+                    <input type="text" placeholder="E-mail">
+                    <input type="text" placeholder="Mande Uma Mensagem Para Nós!">
+                </div>
             </div>
         </div>
     </div>
