Feat:home text style

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             
             <div class = "home-text" >
                 <h1> Ké Pizza? </h1>
+                <h2> O sabor que surpreende, <br> <span> A qualidade conquista! </span> </h2>
                 <p>Bem vindo a nossa Pizzaria, onde o <br> sabor  te supreende e a qualidade conquista! <br> Nossas Pizzas são artesanais, com  <br> ingredientes frescos, com sabor único    <br> e tradição presente em cada fatia. </p>
                 <a href="pages/menu.html" class="btn"> Nosso Menu</a>
                 </a>
