--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class = "home-text" >
                 <h1> Ké Pizza? </h1>
                 <h2> O sabor que surpreende, <br> <span> A qualidade conquista! </span> </h2>
-                <p>Bem vindo a nossa Pizzaria, onde o <br> sabor  te supreende e a qualidade conquista! <br> Nossas Pizzas são artesanais, com  <br> ingredientes frescos, com sabor único    <br> e tradição presente em cada fatia. </p>
+                <p>Bem vindo a nossa Pizzaria, onde a tradição e a gastronomia <br> se encontram. Pizzas são artesanais, com ingredientes  frescos, <br> com  sabor único e tradição presente em cada fatia. </p>
                 <a href="pages/menu.html" class="btn"> Nosso Menu</a>
                 </a>
             </div>
