feat: add button in page contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -45,7 +45,11 @@
                 </div>
             </div>
 
-            
+            <div class="button-enviar">
+                <button>Enviar</button>
+            </div>
+
+
         </div>
     </div>
 </body>
