--- a/pages/menu.html
+++ b/pages/menu.html
@@ -22,7 +22,106 @@
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
+            </div>
+
         </header>
-    </div>
+
+                <div class="card-container">
+
+                    <div class="menu-card">
+                        <img src="../images/alho-pizza.jpg">
+
+                        <div class="card-content">
+                                <h3> Alho e Óleo </h3>
+                                <p>Pizza de Alho frito e mussarela</p>
+                                <a href="" class="btn">Saiba Mais!</a>
+                        </div>
+                    </div>
+
+
+                    <div class="menu-card">
+                        <img src="../images/Pizza-de-calabresa.jpg">
+
+                        <div class="card-content">
+                                <h3> Calabresa </h3>
+                                <p> Pizza de Calabresa fatiada e cebola </p>
+                                <a href="" class="btn">Saiba Mais!</a>
+                        </div>
+                    </div>
+
+                    <div class="menu-card">
+                        <img src="../images/Pizza-de-calabresa.jpg">
+
+                        <div class="card-content">
+                                <h3> Calabresa </h3>
+                                <p> Pizza de Calabresa fatiada e cebola </p>
+                                <a href="" class="btn">Saiba Mais!</a>
+                        </div>
+                    </div>
+
+
+                    <div class="menu-card">
+                        <img src="../images/Pizza-de-calabresa.jpg">
+
+                        <div class="card-content">
+                                <h3> Calabresa </h3>
+                                <p> Pizza de Calabresa fatiada e cebola </p>
+                                <a href="" class="btn">Saiba Mais!</a>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+                
+                <div class="card-container2">
+
+                    <div class="menu-card">
+                        <img src="../images/alho-pizza.jpg">
+
+                        <div class="card-content">
+                                <h3> Alho e Óleo </h3>
+                                <p>Pizza de Alho frito e mussarela</p>
+                                <a href="" class="btn">Saiba Mais!</a>
+                        </div>
+                    </div>
+
+
+                    <div class="menu-card">
+                        <img src="../images/Pizza-de-calabresa.jpg">
+
+                        <div class="card-content">
+                                <h3> Calabresa </h3>
+                                <p> Pizza de Calabresa fatiada e cebola </p>
+                                <a href="" class="btn">Saiba Mais!</a>
+                        </div>
+                    </div>
+
+                    <div class="menu-card">
+                        <img src="../images/Pizza-de-calabresa.jpg">
+
+                        <div class="card-content">
+                                <h3> Calabresa </h3>
+                                <p> Pizza de Calabresa fatiada e cebola </p>
+                                <a href="" class="btn">Saiba Mais!</a>
+                        </div>
+                    </div>
+
+
+                    <div class="menu-card">
+                        <img src="../images/Pizza-de-calabresa.jpg">
+
+                        <div class="card-content">
+                                <h3> Calabresa </h3>
+                                <p> Pizza de Calabresa fatiada e cebola </p>
+                                <a href="" class="btn">Saiba Mais!</a>
+                        </div>
+                    </div>
+
+
+
+                </div>
+  
 </body>
 </html>
