Feat: finish page contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -30,23 +30,32 @@
             </div>
 
             <div class="nome-pizzaria">
-                <h2>Ké Pizza</h2>
+                <h2>Entre Em Contato Conosco!</h2>
             </div>
 
             <div class="endereco-pizarria">
-                <p>Rua dos gatos</p>
+                <p></p>
             </div>
 
             <div class="background-info">
                 <div class="campos-info">
+                    <h3 class="caixinha">Seu nome!</h3>
                     <input type="text" placeholder="Nome">
+
+                    <h3 class="caixinha">Coloque seu E-mail!</h3>
                     <input type="text" placeholder="E-mail">
+
+                    <h3 class="caixinha">Fale com a gente!</h3>
                     <input type="text" placeholder="Mande Uma Mensagem Para Nós!">
                 </div>
             </div>
 
             <div class="button-enviar">
                 <button>Enviar</button>
+            </div>
+
+            <div class="loc">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3674.2626420044644!2d-47.00180376316942!3d-22.940552535514104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8ce0c7a84182f%3A0xd9afb4a6c7bb1667!2sJardim%20Sao%20Marcos%2C%20Valinhos%20-%20SP%2C%2013274-465!5e0!3m2!1spt-BR!2sbr!4v1727207179431!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
 
