Feat: Button link for email, page contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="button-enviar">
-                <button>Enviar</button>
+                <button><a href="mailto:email@provedor.com.br?subject=Assunto do email&cc=copia@provedor.com.br&bcc=copiaoculta@provedor.com.br&body=Conteúdo do email que será preenchido automaticamente">Enviar</a></button>
             </div>
 
             <div class="loc">
