Feat: Add menu-container  CSS ans HTML code

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -29,7 +29,7 @@
 
         <section class="cardapio-container">
 
-            <div class = "cardapio-text" ></div>
+            <div class = "cardapio-text" >
                 <h2> Atendimento rápido e eficiente </h2>
                 <h1>Faça seu pedido!</h1>
                 <p>Bem vindo a nossa Pizzaria, onde a tradição e a gastronomia <br> se encontram. Pizzas são artesanais, com ingredientes  frescos, <br> com  sabor único e tradição presente em cada fatia. </p>
