Feat: Add Bebidas section  CSS ans HTML code

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -30,9 +30,9 @@
         <section class="cardapio-container">
 
             <div class = "cardapio-text" >
-                <h2> Atendimento rápido e eficiente </h2>
-                <h1>Faça seu pedido!</h1>
-                <p>Bem vindo a nossa Pizzaria, onde a tradição e a gastronomia <br> se encontram. Pizzas são artesanais, com ingredientes  frescos, <br> com  sabor único e tradição presente em cada fatia. </p>
+                <h2> Atendimento <span> <br> rápido e eficiente. </span> </h2>
+                <h1>FAÇA SEU PEDIDO!</h1>
+                <p> A melhor pizza de Campinas e região, com ingredientes <br> frescos e sabores únicos. </p>
                 <a href="https://www.ifood.com.br/" class="btn"> Peça agora!</a>
                 </a>
             </div>
@@ -122,6 +122,8 @@
         </section>
 
                             <section class="bebidas-container">
+                                
+                                <div class="division-line"></div>
 
                                 <h5> Para acompanhar </h5>
                                 <h1>Refrigerantes ou Sucos de 1 a 2 Litros</h1>
