Feat: Add minor details in page menu section pizza

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -51,7 +51,7 @@
 
                         <div class="card-content">
                                 <h3> Alho e Óleo </h3>
-                                <p>Pizza de Alho frito e mussarela</p>
+                                <p>Pizza de Alho frito e mussarela.</p>
                                 <a href="" class="btn">Saiba Mais!</a>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
 
                         <div class="card-content">
                                 <h3>Queijo</h3>
-                                <p> Pizza de Queijo </p>
+                                <p> Pizza de Queijo. </p>
                                 <a href="" class="btn">Saiba Mais!</a>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
 
                         <div class="card-content">
                                 <h3> Calabresa </h3>
-                                <p> Pizza de Calabresa fatiada e cebola </p>
+                                <p> Pizza de Calabresa fatiada e cebola. </p>
                                 <a href="" class="btn">Saiba Mais!</a>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                                     
                                     <div class="card-content">
                                         <h3>Egg Bacon</h3>
-                                        <p> Pizza de ovo e bacon</p>
+                                        <p> Pizza de ovo e bacon.</p>
                                         <a href="" class="btn">Saiba Mais!</a>
                                     </div>
                                 </div>
@@ -101,7 +101,7 @@
 
                                     <div class="card-content">
                                             <h3>4 Queijos</h3>
-                                            <p>Pizza de queijo bri, parmesão, prato e cheddar</p>
+                                            <p>Pizza de queijo bri, parmesão, prato e cheddar.</p>
                                             <a href="" class="btn">Saiba Mais!</a>
                                     </div>
                                 </div>
