Feat: Add Pizza price  CSS and HTML code

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -53,7 +53,7 @@
 
                         <div class="card-content">
                                 <h3> Alho e Óleo </h3>
-                                <p>Pizza de Alho frito e mussarela.</p>
+                                <p>Pizza de Alho frito e mussarela. <span>R$15</span> </p>
                                 <a href="" class="btn">Saiba Mais!</a>
                         </div>
                     </div>
