--- a/pages/menu.html
+++ b/pages/menu.html
@@ -64,7 +64,7 @@
 
                         <div class="card-content">
                                 <h3>Queijo</h3>
-                                <p> Pizza de Queijo. </p>
+                                <p> Pizza de Queijo. <span>R$15</span> </p>
                                 <a href="" class="btn">Saiba Mais!</a>
                         </div>
                     </div>
