Feat: Add Pizza price  CSS and HTML code

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -75,7 +75,7 @@
 
                         <div class="card-content">
                                 <h3> Calabresa </h3>
-                                <p> Pizza de Calabresa fatiada e cebola. </p>
+                                <p> Pizza de Calabresa fatiada e cebola. <span>R$15</span> </p>
                                 <a href="" class="btn">Saiba Mais!</a>
                         </div>
                     </div>
