--- a/pages/menu.html
+++ b/pages/menu.html
@@ -93,7 +93,7 @@
                                     
                                     <div class="card-content">
                                         <h3>Egg Bacon</h3>
-                                        <p> Pizza de ovo e bacon.</p>
+                                        <p> Pizza de ovo e bacon. <span>R$15</span></p>
                                         <a href="" class="btn">Saiba Mais!</a>
                                     </div>
                                 </div>
