--- a/pages/menu.html
+++ b/pages/menu.html
@@ -103,7 +103,7 @@
 
                                     <div class="card-content">
                                             <h3>4 Queijos</h3>
-                                            <p>Pizza de queijo bri, parmesão, prato e cheddar.</p>
+                                            <p>Pizza de queijo bri, parmesão, prato e cheddar. <span>R$15</span> </p>
                                             <a href="" class="btn">Saiba Mais!</a>
                                     </div>
                                 </div>
