--- a/pages/menu.html
+++ b/pages/menu.html
@@ -114,7 +114,7 @@
 
                                     <div class="card-content">
                                             <h3>Bauru</h3>
-                                            <p> Pizza de queijo, presunto, requeijão, oregano e tomate.</p>
+                                            <p> Pizza de queijo, presunto, requeijão, oregano e tomate. <span>R$15</span> </p>
                                             <a href="" class="btn">Saiba Mais!</a>
                                     </div>
                                 </div>
