--- a/index.html
+++ b/index.html
@@ -49,5 +49,11 @@
         </section>
         
     </div>
+
+    <footer>
+        <div class="footer-background">
+            <p>© 2024 Pizzaria Ké Pizza</p>
+        </div>
+    </footer>
     </body>
     </html>
