--- a/pages/contato.html
+++ b/pages/contato.html
@@ -61,5 +61,11 @@
 
         </div>
     </div>
+
+    <footer>
+        <div class="footer-background">
+            <p>© 2024 Pizzaria Ké Pizza</p>
+        </div>
+    </footer>
 </body>
 </html>
