--- a/pages/menu.html
+++ b/pages/menu.html
@@ -205,5 +205,11 @@
 
                                 </section>
                                     
+
+                                <footer>
+                                    <div class="footer-background">
+                                        <p>© 2024 Pizzaria Ké Pizza</p>
+                                    </div>
+                                </footer>
                                 </body>
                                 </html>
