Refactor: Header in all pages and css

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,21 +9,23 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo-img">
-                <img src="../images/Pizzaria logo (1).png" alt="logo da pizzaria Ké Pizza">
-            </div>
+            <div class="div-container">
+                <div class="logo-img">
+                    <img src="/images/Pizzaria logo (1).png" alt="Logo Pizzaria Ké Pizza">
+                </div>
 
-            <div class="titulo-header">
-                <h2 class="h2-header">Ké Pizza</h2>
-            </div>
+                <div class="titulo-header">
+                    <h1>Pizzaria Ké Pizza</h1>
+                </div>
 
-            <ul class="nav-bar">
-                <li><a href="../index.html">Início</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
+                <div class="nav">
+                    <nav>
+                        <li><a href="../index.html">Início</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </nav>
+                </div>
             </div>
-
         </header>
 
 
