--- a/index.html
+++ b/index.html
@@ -21,9 +21,21 @@
 <body>
     <div class="container">
         <header>
-            <div class="header-div">
+            <div class="div-container">
                 <div class="logo-img">
-                    <img src="../images/logo.png" alt="Logo Pizzaria Ké Pizza">
+                    <img src="/images/Pizzaria logo (1).png" alt="Logo Pizzaria Ké Pizza">
+                </div>
+
+                <div class="titulo-header">
+                    <h1>Pizzaria Ké Pizza</h1>
+                </div>
+
+                <div class="nav">
+                    <nav>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="/pages/menu.html">Menu</a></li>
+                        <li><a href="/pages/contato.html">Contato</a></li>
+                    </nav>
                 </div>
             </div>
         </header>
