Feat: Responsive layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Pizzaria Ké Pizza</title>
 
     <!--Link para pacote de icons e fonts-->
@@ -25,7 +25,7 @@
                 <div class="logo-img">
                     <img src="/images/Pizzaria logo (1).png" alt="Logo Pizzaria Ké Pizza">
                 </div>
-
+                
                 <div class="titulo-header">
                     <h1>Pizzaria Ké Pizza</h1>
                 </div>
